--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,12 +1,10 @@
+image:
+  file: .gitpod.Dockerfile
+
 jetbrains:
   intellij:
     plugins:
       - com.google.idea.bazel.ijwb
 tasks:
-  - name: Install Bazelisk
-    before: |
-     curl -LO "https://github.com/bazelbuild/bazelisk/releases/download/v1.10.1/bazelisk-linux-amd64"
-     mv bazelisk-linux-amd64 /usr/bin/bazel
-     chmod +x /usr/bin/bazel
   - name: Build project
     command: bazel build //...
